# mdvsp-colgen

./: .gitignore  CMakeLists.txt  LICENSE
doc/: bibliography.bib  mdvsp-colgen.tex
doc/cg-example/: compact.zpl  pathgen.py  paths.zpl
julia/MdvspCg/: Manifest.toml  Project.toml
julia/MdvspCg/src/: MdvspCg.jl  instance.jl  main.jl  subproblem.jl
src/: CgMasterGlpk.cpp  CgMasterGlpk.h  DualProvider.h  EnvVars.h  Instance.cpp  Instance.h  MemQuery.h  ModelCbc.cpp  ModelCbc.h  Timer.h  main.cpp
src/colgen/: CgMasterBase.cpp  CgMasterBase.h  CgMasterClp.cpp  CgMasterClp.h  CgMasterCplex.cpp  CgMasterCplex.h  CgMasterGlpk.cpp  CgMasterGlpk.h  CgMasterInterface.h  CgPricingBase.cpp  CgPricingBase.h  CgPricingInterface.h  PricingBellman.cpp  PricingBellman.h  PricingCbc.cpp  PricingCbc.h  PricingCplex.cpp  PricingCplex.h  PricingGlpk.cpp  PricingGlpk.h  PricingSpfa.cpp  PricingSpfa.h
